--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
     "manifest_version": 3,
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
+    "name": "ForceDark",
+    "description": "Stop bright websites from making your eyes hurt!",
     "version": "1.0",
     "action": {
-      "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
-    }
+      "default_popup": "src/index.html",
+      "default_icon": "assets/icon64.png"
+    },
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js": ["src/scripts/content-script.js"]
+      }
+    ]
 }
